@@ -9,6 +9,7 @@
     - de4dot 1.9.0 update. New deobfuscation support for CodeFort, CodeWall,
       ILProtector, MPRESS, Rummage.
     - Mono.Cecil update.
+    - ARM, WindowsRuntime and Module characteristics support.
         
   bugfixes:
     - 
